bin/testsuite/tests/compiler/src/errors/compiler5097.swg
#global testerror "Err0692"

struct A {}
impl A for A
{
}
